rnsc/test_data/integration/error/parser/type_hints/string/trailing_tokens.rns
.class @string value unexpected_second_operand
.super java/lang/Object